--- a/emacs.org
+++ b/emacs.org
@@ -401,7 +401,7 @@ mode line
          (process-id (when process-name (process-id process-name)))
          (projectile-project-raw (projectile-project-name))
          (projectile-project (if (string= projectile-project-raw "-") nil projectile-project-raw))
-         (display-name (if jw-mode-line-config-show-pwd (format "%s · %s" pwd buffer-name) buffer-name)))
+         (display-name (if jw-mode-line-config-show-pwd (format "%s · %s" (or projectile-project pwd) buffer-name) buffer-name)))
     (list (propertize display-name 'face 'mode-line-buffer-id
                       'help-echo (format "Buffer name: %s\nFile name: %s\nProcess name: %s\npid: %s\npwd: %s\nProjectile project: %s"
                                          buffer-name (or file-name "N/A") (or process-name "N/A") (or process-id "N/A") pwd (or projectile-project "N/A"))
