--- a/emacs.org
+++ b/emacs.org
@@ -1479,11 +1479,11 @@ If the server is connected and a prefix arg is provided, then invoke a quick /ms
                            (local-set-key (kbd "C-c .") 'org-time-stamp-inactive)
                            (local-set-key (kbd "C-c C-x g") 'jw-org-feed-update-all-or-one)))
 
-(defun org--color-red-box-state (s) `(,s :background "DarkRed" :foreground white :box (:style released-button)))
+(defun org--color-red-box-state (s) `(,s :background "DarkRed" :foreground "LightGrey" :box (:style released-button)))
 (defun org--color-red-state (s) `(,s :foreground "Coral"))
-(defun org--color-blue-box-state (s) `(,s :background "DeepSkyBlue4" :foreground white :box (:style released-button)))
+(defun org--color-blue-box-state (s) `(,s :background "DeepSkyBlue4" :foreground "LightGrey" :box (:style released-button)))
 (defun org--color-blue-state (s) `(,s :foreground "DeepSkyBlue1"))
-(defun org--color-green-box-state (s) `(,s :background "DarkGreen" :foreground white :box (:style released-button)))
+(defun org--color-green-box-state (s) `(,s :background "DarkGreen" :foreground "LightGrey" :box (:style released-button)))
 (defun org--color-green-state (s) `(,s :foreground "LimeGreen"))
 
 (setq org--todo-todo-boxed-states '("todo" "incoming" "captured" "unread" "question" "problem" "issue" "shitshow" "alert" "warning")
